Add requets logging and request customizer
Signed-off-by: mikalai.salauyou <mikalai.salauyou@evrythng.com>

--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -8,9 +8,9 @@ server:
 logging:
   level:
     root: trace
+
 base:
   url: "http://test.devenv.smartym.by/"
-
 
 spring:
   security:
@@ -19,12 +19,12 @@ spring:
         provider:
           smartym:
             authorization-uri: "http://test.devenv.smartym.by/signin"
-            token-uri: "http://test.devenv.smartym.by/token?scope=aisp,cbpii,pisp"
+            token-uri: "http://test.devenv.smartym.by/token"
         registration:
           smartym:
             client-authentication-method: "client_secret_post"
             client-id: "HKGzRFKpSVjSpTPQ"
             client-secret: "ovnLjsKEEciCxjwmeHZSB"
             authorization-grant-type: "authorization_code"
-            scope: "aisp,cbpii,pisp"
+            scope: "aisp"
             redirect-uri: "http://localhost:8080/payment/form"
