--- a/build.gradle
+++ b/build.gradle
@@ -18,13 +18,13 @@ dependencies {
   implementation 'org.springframework.boot:spring-boot-starter-security'
   implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
   implementation 'org.springframework.boot:spring-boot-starter-web'
+  implementation 'org.springframework.boot:spring-boot-starter-webflux'
 
   implementation 'org.modelmapper:modelmapper:3.1.0'
   implementation 'com.squareup.retrofit2:retrofit:2.9.0'
   implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
   implementation 'com.squareup.okhttp3:logging-interceptor:4.10.0'
-
-  implementation 'org.springframework.security.oauth.boot:spring-security-oauth2-autoconfigure:2.6.8'
+  implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 
   testImplementation 'org.springframework.boot:spring-boot-starter-test'
 }
